--- a/res/layout/layout_main_plus_trevel.xml
+++ b/res/layout/layout_main_plus_trevel.xml
@@ -23,23 +23,25 @@
             <LinearLayout
                 android:id="@+id/layout_view1"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@android:color/white"
-                android:orientation="horizontal"
-                android:paddingLeft="16dp"
                 android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="16dp"
                 android:paddingRight="16dp" >
 
                 <RelativeLayout
                     android:id="@+id/layout_select_who"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
+                    android:layout_height="42dp"
+                    android:layout_marginBottom="10dp" >
 
                     <TextView
                         android:id="@+id/tv_who_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
                         android:text="给谁创建:"
                         android:textStyle="bold" />
 
@@ -55,120 +57,129 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
-                        android:layout_alignTop="@id/tv_select_who_name"
+                        android:layout_centerVertical="true"
                         android:drawablePadding="5dp"
                         android:drawableRight="@drawable/icon_plus_arrowright"
                         android:textColor="@color/red_text_color" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_alignParentBottom="true"
+                        android:background="#e1e1e1" />
                 </RelativeLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#e1e1e1" />
+                <!-- 城市 -->
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:orientation="vertical" >
+                    android:orientation="horizontal" >
 
-                    <RelativeLayout
-                        android:id="@+id/layout_start_city"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/bg_main_plus_page"
-                        android:gravity="center_vertical"
-                        android:padding="8dp" >
+                        android:layout_weight="3"
+                        android:orientation="vertical" >
 
-                        <ImageView
-                            android:id="@+id/iv_start_icon"
+                        <RelativeLayout
+                            android:id="@+id/layout_start_city"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:background="@drawable/icon_plus_start_feiji" />
+                            android:background="@drawable/bg_main_plus_page"
+                            android:gravity="center_vertical"
+                            android:padding="8dp" >
 
-                        <TextView
-                            android:id="@+id/tv_start_title"
+                            <ImageView
+                                android:id="@+id/iv_start_icon"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:background="@drawable/icon_plus_start_feiji" />
+
+                            <TextView
+                                android:id="@+id/tv_start_title"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="8dp"
+                                android:layout_toRightOf="@id/iv_start_icon"
+                                android:text="出发城市"
+                                android:textColor="#676767" />
+
+                            <ImageView
+                                android:id="@+id/iv_right_icon"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerVertical="true"
+                                android:background="@drawable/icon_plus_arrowright" />
+
+                            <TextView
+                                android:id="@+id/tv_start_location"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginRight="15dp"
+                                android:layout_toLeftOf="@id/iv_right_icon"
+                                android:text="选择城市"
+                                android:textColor="@color/red_text_color" />
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:id="@+id/layout_end_city"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginLeft="8dp"
-                            android:layout_toRightOf="@id/iv_start_icon"
-                            android:text="出发城市"
-                            android:textColor="#676767" />
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/bg_main_plus_page"
+                            android:padding="8dp" >
 
-                        <ImageView
-                            android:id="@+id/iv_right_icon"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:background="@drawable/icon_plus_arrowright" />
+                            <ImageView
+                                android:id="@+id/iv_mudi_icon"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:background="@drawable/icon_plus_mudi_feiji" />
 
-                        <TextView
-                            android:id="@+id/tv_start_location"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginRight="15dp"
-                            android:layout_toLeftOf="@id/iv_right_icon"
-                            android:text="选择城市"
-                            android:textColor="@color/red_text_color" />
-                    </RelativeLayout>
+                            <TextView
+                                android:id="@+id/tv_mudi_title"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="8dp"
+                                android:layout_toRightOf="@id/iv_mudi_icon"
+                                android:text="到达城市"
+                                android:textColor="#676767" />
 
-                    <RelativeLayout
-                        android:id="@+id/layout_end_city"
-                        android:layout_width="wrap_content"
+                            <ImageView
+                                android:id="@+id/iv_mudi_right_icon"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerVertical="true"
+                                android:background="@drawable/icon_plus_arrowright" />
+
+                            <TextView
+                                android:id="@+id/tv_mudi_location"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginRight="15dp"
+                                android:layout_toLeftOf="@id/iv_mudi_right_icon"
+                                android:text="选择城市"
+                                android:textColor="@color/red_text_color" />
+                        </RelativeLayout>
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/iv_switch_city"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/bg_main_plus_page"
-                        android:padding="8dp" >
-
-                        <ImageView
-                            android:id="@+id/iv_mudi_icon"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:background="@drawable/icon_plus_mudi_feiji" />
-
-                        <TextView
-                            android:id="@+id/tv_mudi_title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginLeft="8dp"
-                            android:layout_toRightOf="@id/iv_mudi_icon"
-                            android:text="到达城市"
-                            android:textColor="#676767" />
-
-                        <ImageView
-                            android:id="@+id/iv_mudi_right_icon"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:background="@drawable/icon_plus_arrowright" />
-
-                        <TextView
-                            android:id="@+id/tv_mudi_location"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginRight="15dp"
-                            android:layout_toLeftOf="@id/iv_mudi_right_icon"
-                            android:text="选择城市"
-                            android:textColor="@color/red_text_color" />
-                    </RelativeLayout>
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:scaleType="center"
+                        android:src="@drawable/icon_main_plus_switch" />
                 </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/iv_switch_city"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:scaleType="center"
-                    android:src="@drawable/icon_main_plus_switch" />
             </LinearLayout>
 
             <LinearLayout
