--- a/res/layout/my_order_activity.xml
+++ b/res/layout/my_order_activity.xml
@@ -18,9 +18,9 @@
         android:orientation="vertical" >
 
         <ListView
-            android:id="@+id/listview"
+            android:id="@+id/order_list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:divider="@color/activity_bg_color"
             android:dividerHeight="1dp"
