--- a/res/layout/order_details_activity.xml
+++ b/res/layout/order_details_activity.xml
@@ -22,6 +22,7 @@
             android:textColor="@color/simi_color_gray" />
 
         <TextView
+            android:id="@+id/item_tv_order_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="61293478364811104"
@@ -44,7 +45,7 @@
                 android:padding="18dp" >
 
                 <ImageView
-                    android:id="@+id/item_iv_icon"
+                    android:id="@+id/item_tv_icon"
                     android:layout_width="52dp"
                     android:layout_height="52dp"
                     android:layout_centerVertical="true"
@@ -55,11 +56,11 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="18dp"
-                    android:layout_toRightOf="@id/item_iv_icon"
+                    android:layout_toRightOf="@id/item_tv_icon"
                     android:orientation="vertical" >
 
                     <TextView
-                        android:id="@+id/item_tv_name"
+                        android:id="@+id/item_tv_order_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="机票" />
@@ -98,6 +99,7 @@
                     android:textColor="@color/simi_color_gray" />
 
                 <TextView
+                    android:id="@+id/item_tv_order_content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -121,6 +123,7 @@
                     android:textColor="@color/simi_color_gray" />
 
                 <TextView
+                    android:id="@+id/item_tv_order_money"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -144,6 +147,7 @@
                     android:textColor="@color/simi_color_gray" />
 
                 <TextView
+                    android:id="@+id/item_tv_pay_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -167,6 +171,7 @@
                     android:textColor="@color/simi_color_gray" />
 
                 <TextView
+                    android:id="@+id/itemt_tv_remarks"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
