--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -31,7 +31,7 @@
     <!-- 页面背景颜色 -->
     <color name="activity_bg_color">#F1F1F1</color>
     <!-- 透明色 -->
-    <color name="transparent">#00000000</color>
+<!--     <color name="transparent">#00000000</color> -->
 
     <!-- 首页TAB页签文字颜色 -->
     <color name="tab_text_color">#000000</color>
